# aiosignal

./: .cherry_picker.toml  .coveragerc  .gitignore  .lgtm.yml  .mypy.ini  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGES.rst  CONTRIBUTORS.txt  MANIFEST.in  Makefile  README.rst  codecov.yml  pyproject.toml  pytest.ci.ini  pytest.ini  setup.cfg  setup.py  tox.ini
.azure-pipelines/: ci.yml  deploy.yml  stage-deploy.yml  stage-lint.yml  stage-test.yml
.dependabot/: config.yml
.github/: ISSUE_TEMPLATE.md  codeql.yml  config.yml  dependabot.yml
.github/actions/cache-keys/: action.yml
.github/reusables/tox-dev/workflow/reusable-tox/hooks/post-src-checkout/: action.yml
.github/reusables/tox-dev/workflow/reusable-tox/hooks/post-tox-run/: action.yml
.github/workflows/: auto-approve.yml  ci-cd.yml  ci.yml  codeql.yml  dependabot-auto-merge.yml
CHANGES/: 165.bugfix  23.removal  267.feature  361.bugfix  362.misc  413.removal  508.feature  528.doc  699.1.feature.rst  699.2.feature.rst  699.feature  699.feature.1.rst  699.feature.2.rst  699.feature.rst  705.feature.rst  710.feature.rst  711.feature.rst  794.doc  812.fix
aiosignal/: __init__.py  __init__.pyi  typedefs.py
docs/: Makefile  conf.py  index.rst  make.bat  spelling_wordlist.txt
requirements/: ci-bot.txt  ci-wheel.txt  ci.txt  dev.txt  doc-spelling.txt  doc.txt  flake.txt  wheel.txt
tests/: test_signals.py
tools/: build-wheels.sh  check_changes.py
