[metadata]
name = aiosignal
version = attr: aiosignal.__version__
url = https://github.com/aio-libs/aiosignal
project_urls =
  Chat: Gitter = https://gitter.im/aio-libs/Lobby
  CI: GitHub Actions = https://github.com/aio-libs/aiosignal/actions
  Coverage: codecov = https://codecov.io/github/aio-libs/aiosignal?flags[0]=pytest
  Docs: RTD = https://docs.aiosignal.org
  GitHub: issues = https://github.com/aio-libs/aiosignal/issues
  GitHub: repo = https://github.com/aio-libs/aiosignal
description = aiosignal: a list of registered asynchronous callbacks
long_description = file: README.rst
long_description_content_type = text/x-rst
maintainer = aiohttp team <team@aiohttp.org>
maintainer_email = team@aiohttp.org
license = Apache 2.0
license_file = LICENSE
classifiers =
  License :: OSI Approved :: Apache Software License

  Intended Audience :: Developers

  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only

  Development Status :: 5 - Production/Stable
  Operating System :: POSIX
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows
  Framework :: AsyncIO

[options]
python_requires = >=3.9
packages = find:
include_package_data = True

install_requires =
  frozenlist >= 1.1.0
  typing-extensions; python_version == '3.9'


[pep8]
max-line-length=88

[easy_install]
zip_ok = false

[flake8]
ignore = N801,N802,N803,E203,E226,E305,W504,E252,E301,E302,E704,W503,W504,F811
max-line-length = 88

[isort]
line_length=88
include_trailing_comma=True
multi_line_output=3
force_grid_wrap=0
combine_as_imports=True

known_third_party=pytest
known_first_party=aiosignal

[report]
exclude_lines =
  @abc.abstractmethod
  @abstractmethod
